# baseplate

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
apps/frontend/src/lib/: index.ts
apps/frontend/src/lib/components/: Console.svelte  Editor.svelte
apps/frontend/src/routes/: +page.svelte
crates/: Cargo.toml  config.toml
crates/.sqlx/: query-06ef191cb5ae49289a1b924cd053f5e7a1e9528e3e64763f6ff369736505edd9.json  query-12e4353143b70d0a9cb0108d33ff3a39387a95da6a9ebf7e487a6af24d41bdc8.json  query-2df13968319d2d8915cc561286ffb9e336420f637d536b6f09384f57e5a96bba.json  query-30614ba7e994ae9a7f85e2e4c38af8df2aef3c600dbbac684de4d871291d2138.json  query-5e849860f642cc2d6d0b5fc4d449d9ab414599c36d9132293e91eaec07a91ee5.json  query-751d0518664685b8b92f9450e18354b697ed52f0c3ef2bc96cd06ee53901d09a.json  query-7c7fccbac2e3758af1c4cdcb626d9d22a0134c7be2ad0c842415db74f52fb352.json  query-865ce9a31bbc16e2f2e056bd349d79a95c97ba0ea10be31419c9683fa431c625.json  query-b54dd838c6eb9efa6e4fd8f46dbed5856ced2c5473c481b395456e3fcbacaf69.json  query-d0f40602046418e0640e2b1ec1d78a8290ca920e6982388924e35d06f1183467.json  query-ddbea7c7f1ed1a6ea47dc0e82dffc131cfbd1e8c81e07da72d57b40710d127d2.json  query-ee826fe76654afd3483eba23c5541f3ff3defda17dd7970a537fc4ffaf1e061d.json  query-fa08e2906a991234ad309bc8a44b68000d5a3f0c35a43b730fc587e888769bcf.json  query-fabd3583702a54f4c50a43995ef5066f1138944c0423249db3331bae54bdb1f1.json
crates/crates/backend/: Cargo.toml
crates/crates/backend/src/: main.rs  routes.rs
crates/crates/backend/src/routes/v1/: definitions.rs  instances.rs  mod.rs
crates/crates/common-core/: Cargo.toml
crates/crates/common-core/src/: db.rs  definitions.rs  instances.rs  keys.rs  lib.rs  logging.rs  redis.rs
crates/crates/common-core/src/repository/: definition.rs  instances.rs  mod.rs
crates/crates/common-dto/: Cargo.toml
crates/crates/common-dto/src/: events.rs  json.rs  lib.rs
crates/crates/common-dto/src/models/: definitions.rs  instances.rs  mod.rs
crates/crates/common-dto/src/models/definitions/: components.rs  fields.rs
crates/crates/common-dto/src/views/: definitions.rs  instances.rs  mod.rs
crates/crates/worker/: Cargo.toml  example.js  example.py
crates/crates/worker/src/: ampq.rs  config.rs  http.rs  lib.rs  main.rs  script.rs  webhook.rs
crates/migrations/: 20260228220437_create_definitions.sql  20260301152213_create_instances.sql
scripts/javascript/: Dockerfile  bootstrap.js  sdk.js
scripts/python/: Dockerfile  bootstrap.py  sdk.py
