[workspace]
members = [
    "crates/backend",
    "crates/common-core",
    "crates/common-dto",
    "crates/worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
    "fs",
    "net",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
redis = { version = "1.0", features = ["tokio-comp", "r2d2"] }
deadpool-redis = { version = "0.23", features = ["rt_tokio_1"] }
lapin = { version = "4.0" }
futures-util = "0.3"
futures = "0.3"
uuid = { version = "1", features = ["v7", "serde"] }
reqwest = { version = "0.13", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
bollard = { version = "0.20" }
lazy_static = "1.5"
toml = "0.9"
base64 = "0.22"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1.0"
