[package]
name = "backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tower-http.workspace = true
common-core = { path = "../common-core" }
common-dto = { path = "../common-dto" }
uuid.workspace = true
lapin.workspace = true
anyhow.workspace = true
serde_json.workspace = true
