[package]
name = "common-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
regex.workspace = true
