[package]
name = "worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
redis.workspace = true
deadpool-redis.workspace = true
tokio.workspace = true
tracing.workspace = true
lapin.workspace = true
futures.workspace = true
serde_json.workspace = true
serde.workspace = true
uuid.workspace = true
reqwest.workspace = true
bollard.workspace = true
lazy_static.workspace = true
chrono.workspace = true
base64.workspace = true
tar = "0.4"
toml.workspace = true
axum.workspace = true
common-core = { path = "../common-core" }
common-dto = { path = "../common-dto" }
anyhow.workspace = true
tower-http.workspace = true
